--- a/posts/2023-09-17.md
+++ b/posts/2023-09-17.md
@@ -40,7 +40,7 @@ If you don't have access to analogous tools in your platform, it's worth a think
 ### Scale
 
 Scale doesn't unpack as neatly into three component properties, but there are three facets that I think about, at least one of which I find very subtle.
-These three connect up to the "myriad Vs of Big Data", worth a quick web search to see different takes if you don't yet have one of your own.
+These three connect up to the "myriad Vs of Big Data", worth a quick web search to see variegated takes if you don't yet have one of your own.
 
 The **volume** of data you work with imposes some baseline capacity requirements on your system. 
 As you increase the volume, the data may outgrow a single computer and its venerable hard drive.
@@ -54,6 +54,18 @@ The **value** of your use cases is the one that I think is subtle.
 Additional use cases provide additional value to you and your organization. 
 You'll want to add use cases without negatively impacting existing use cases. Materialize provides several mechanisms for performance and fault isolation, so that you can reliably increase your use of Materialize.
 
+There are certainly other dimensions to scalability, but these three are top of mind for us. 
+
 ### Ease
 
-Ease .. is about so many things.
+Much of the value that Materialize provides is its ability to stand in for expertise you would otherwise need.
+Materialize does unsurprising things for you using a language you understand.
+Materialize interoperates naturally with your existing tools and workflows.
+Materialize clearly explains what it is doing and why, and to what ends.
+You may be able to figure all of these details out on your own, but that should be your choice.
+
+Of the three pillars, ease is the certainly the one that is the most directional and aspirational.
+It isn't something that can be completely spelled out in just a few sentences or with a cunning diagram.
+However, it is something that we all know when we see it, or feel it, and we all understand its value.
+Materialize isn't here to win knock-down drag-out performance slugfests, or awards for fascinating designs.
+Our goal is to find the shortest path from you and your data to a running operational workload.
