input consistency examples

--- a/posts/2023-09-19.md
+++ b/posts/2023-09-19.md
@@ -70,9 +70,33 @@ Ideally, Materialize would assign timestamps to updates that exactly track the m
 In practice, these sources are often insufficiently specific about their changes, and Materialize instead "reclocks" their sequence of states into its virtual time.
 When it does so, it assigns timestamps that aim to be consistent with the source itself.
 
+Materialize records its timestamp assignment in auxiliary sources, which are themselves continually evolving collections that record the progress through the source at each time.
+
+PostgreSQL sources move forward using a "log sequence number", and you can see the current time and current log sequence number with the following query.
 ```
-EXAMPLE OF PROGRESS SOURCE
+materialize=> select mz_now(), * from pg_source_progress;
+        mz_now |         lsn
+---------------+-------------
+ 1695659907060 | 11695622984
+(1 row)
 ```
+
+Kafka is more complicated. Each topic is comprised of an unbounded number of partitions, each of which moves forward through integer offsets. 
+Rather than a single `lsn`, each time has an association between partition ids and offsets, including a `0` for all of the partitions that have not yet come into existence.
+```
+materialize=> select mz_now(), * from kafka_source_progress;
+        mz_now | partition |   offset
+---------------+-----------+----------
+ 1695659699912 |     [0,0] | 40166616
+ 1695659699912 |     [1,1] | 40781940
+ 1695659699912 |     [2,2] | 40472272
+ 1695659699912 |      (2,) |        0
+(4 rows)
+```
+
+When Materialize reclocks these sources into its own timestamps, it aims to maintain consistency with the inputs.
+Specifically, it maintains the order of events in the underlying sources, it respects transaction boundaries when it is aware of them, and it could (but currently does not) transact against the upstream source to ensure that all writes are immediately visible.
+Let's dive in to each of these properties.
 
 Most streamed sources have a notion of order, in some cases a total order like PostgreSQL's replication log, and in some cases a weaker order like Kafka's partitioned topics.
 Materialize's timestamp assignment should (and does) respect this order, so that you see a plausible database state.
@@ -80,8 +104,23 @@ Materialize records for each virtual timestamp the coordinates in the input orde
 A new data update is assigned the first timestamp whose coordinates contain the update.
 As long as the recorded coordinates move forward along the order as times increase, the revealed states of the data also move forward following the order.
 
+For PostgreSQL we can verify that repeated inspection of the progress source shows an advancing timestamp and an advancing log sequence number.
 ```
-REPEATED SELECTION FROM PROGRESS SOURCE
+materialize=> select mz_now(), * from pg_source_progress;
+        mz_now |         lsn
+---------------+-------------
+ 1695659907060 | 11695622984
+(1 row)
+materialize=> select mz_now(), * from pg_source_progress;
+        mz_now |         lsn
+---------------+-------------
+ 1695659910061 | 11695624104
+(1 row)
+materialize=> select mz_now(), * from pg_source_progress;
+        mz_now |         lsn
+---------------+-------------
+ 1695659911994 | 11695624568
+(1 row)
 ```
 
 Many streamed sources reveal transactional boundaries, such as PostgreSQL's replication log.
@@ -89,9 +128,8 @@ Kafka itself supports "transactional writes" but does not reveal the transaction
 For PostgreSQL, Materialize assigns identical timestamps to all updates associated with the same transaction.
 This ensures that other operations either see all or none of the updates in any transaction.
 
-```
-TRANSACTIONS IN POSGRESQL?
-```
+You would be able to observe this in a demo environement where you transact against your PostgreSQL database, and observe the progress source in Materialize, never observing transactional updates spanning timestamps.
+However, this demo does not translate well to the printed word.
 
 Finally, having written something to an upstream system (and received confirmation) you might like to be certain it is now available and reflected in Materialize.
 This can be achieved by transacting against the upstream system for each timestamp we produce, but is not currently done by Materialize.
