Reflect most comments

--- a/posts/2023-09-19.md
+++ b/posts/2023-09-19.md
@@ -1,4 +1,4 @@
-## Consistency, Correctness, and Completeness in Materialize
+## Consistency and Operational Confidence
 
 Consistency is one facet of Materialize's "Trust" pillar, the others being responsiveness and freshness.
 It turns out that being super responsive and ultra fresh doesn't amount to much if the results don't make any sense.
@@ -8,16 +8,17 @@ The last thing you need in your operational data plane is a layer that introduce
 Many popular platforms ultimately bring weak consistency properties.
 We've discussed in [our product principles post](https://materialize.com/blog/operational-attributes/) how caches and bespoke microservices are one way to get both responsiveness and freshness, but at the expense of consistency.
 But even internally consistent platforms, like some stream processors and data warehouses, often end up wrapped in caches and serving layers for operational work. 
-Their consistency properties largely go out the window at that point, and it becomes your job to make sure that these systems integrate as intended.
+Their consistency properties largely go out the window at that point, and it becomes your job to make sure that these systems operate as intended.
 
 At Materialize we believe consistency is at the heart of the value that a database provides.
 The *order* that a database introduces is why you use one, rather than a heap of JAR files pointed at various Kafka topics.
 For those of you with a heap of JAR files and Kafka topics, this post is for you.
 
 Informally, consistency speaks to Materialize *appearing* to simply process commands and events in the order they happen in the real world.
-While the reality is that no scalable data platform does anything nearly as simple as this, responsible platforms don't let that become your problem.
+While the reality is that no scalable data platform does anything nearly so simple, responsible platforms don't let that become your problem.
 Materialize is a responsible platform, and it opts you in to the strongest consistency guarantees we know of: [strict serializability](https://jepsen.io/consistency/models/strict-serializable).
 Although powerful, these database guarantees needs to be extended from command-response operation (pull) to streaming operation (push), as Materialize supports both concurrently.
+
 In this post we will unpack Materialize's consistency guarantees, show them happening in a [playground environment](https://materialize.com/register/), and help you probe and evaluate the consistency properties of the tools you are currently using for your operational work.
 
 
@@ -46,11 +47,8 @@ Materialized views are kept always up to date, as if they are refreshed instanta
 Output data can be provided to external sinks like Kafka, as streams of events rather than sequences of transactions.
 We need to speak clearly about how Materialize's consistency guarantees integrate with these features.
 
-These three concerns lie at the heart of an operational data warehouse.
-You need to trust that your platform reflects the state of your input data, that it faithfully maintains views and computation over these data, and that it clearly communicates onward to downstream systems.
-The three combine to ensure that your operational work reflects your business logic faithfully applied and maintained across your input data.
-
-Let's now dive in to each of the three concerns, which I'll call here input consistency, internal consistency, and output consistency.
+These three concerns lie at the heart of an operational data warehouse, whose outputs and actions must faithfully represent business logic applied to their inputs.
+Without this guarantee, it is not entirely clear what an operational platform will and will not do on your behalf..
 
 ---
 
@@ -63,7 +61,10 @@ Not only will Materialize behave as if all operations happen in *some* order, as
 
 ---
 
-### Input Consistency
+Let's now dive in to each of the three concerns, which I'll call here input consistency, internal consistency, and output consistency.
+
+
+#### Input Consistency
 
 Materialize draws streamed input data from external sources, like Kafka and PostgreSQL.
 Ideally, Materialize would assign timestamps to updates that exactly track the moments of change in the upstream data.
@@ -138,19 +139,18 @@ We think we should do it, however, and you should expect systems that can provid
 Timestamp assignment is the moment Materialize introduces order to its often inconsistent sources of data. 
 It is also the moment we are able to be precise about the consistency properties we are able to maintain, and which we will need to invent.
 
-### Internal Consistency
+#### Internal Consistency
 
 Materialize has streaming internals, and uses them to continually keep various materialized views up to date.
 Even with careful timestamps on input updates, with all the updates in motion through the streaming internals there is the real possibility that Materialize might reveal inconsistent results.
 Inconsistent or transiently incorrect results are unacceptable for operational work; at best you have to stall your operational plane to sort things out, and at worst you may take irrevocable incorrect actions.
 
+Many stream processors have the baffling property that their outputs need not correspond to any specific input.
+This comes under the name of [eventual consistency](https://en.wikipedia.org/wiki/Eventual_consistency), which allows systems to be transiently incorrect as long as their inputs continue to change.
+Inputs change pretty much always for stream processors, that's why you use them, leaving several popular systems with no specific consistency properties.
+For an excellent overview, [Jamie Brandon's post on "internal consistency"](https://www.scattered-thoughts.net/writing/internal-consistency-in-streaming-systems/) evaluates this property for ksqlDB, Flink's Table API, and Materialize (and finds chaos in the non-Materialize entrants).
 
-Many stream processors continually produce outputs that are the correct answer to no possible input data. 
-This comes under the name of [eventual consistency](), which allows systems to be transiently incorrect as long as their inputs continue to change.
-This is "pretty much always" for stream processors, and yet several popular systems can't be relied on to produce correct outputs while connected to live data.
-For an excellent overview, [Jamie Brandon's post on "internal consistency"](https://www.scattered-thoughts.net/writing/internal-consistency-in-streaming-systems/) evaluates this property for ksqlDB, Flink's Table API, and Materialize (which was the one of the three that passed).
-
-Materialize produces **specific** and **correct** outputs for timestamped inputs.
+Materialize continually produces **specific** and **correct** outputs for its timestamped inputs.
 Anything else is a bug.
 
 We can see this in a playground environment using a query like Jamie used in his post.
@@ -208,7 +208,7 @@ SELECT mz_now(), * FROM balance WHERE total < -100
 ```
 All results Materialize produces are the specific answers to the query on the input data as it existed at the query time.
 
-### Output Consistency
+#### Output Consistency
 
 Finally, having both ingested and maintained results, Materialize needs to speak clearly about its results to external systems.
 We saw just above that a `SELECT` query can use `mz_now()` to learn the specific moment at which query results were correct.
@@ -256,49 +256,15 @@ I pressed `ENTER` between blocks of returned results to suggest at the live expe
 -- Nothing happens for a while.
 ```
 The columns of each returned row are: first the timestamp in milliseconds since 1970, second "is this a watermark", third the change in the cardinality of the record, and finally the payload columns of the record itself.
-Watermark records indicate the forward progress of times, and have null values for columns other than the timestamp.
+Watermark records indicate only the forward progress of times, that all future timestamps will be at least so large, and have null values for columns other than the timestamp.
 
-The first and immediate block of results is the "initial snapshot timestamp" progress message, which tells us the time the initial snapshot of the `SUBSCRIBE` will reflect.
-```
-1695653291958	t	\N	\N
--- Timestamp of initial snapshot
-```
-This row is always the first row returned, and communicates idiomatically that we are not reporting anything before this time.
-This distinguishes the results from e.g. an initially empty collection that quickly changes to contain some result.
+The first and immediate block of output is the "initial snapshot timestamp" progress message, which tells us the time the initial snapshot of the `SUBSCRIBE` will reflect.
+The second block of output includes the snapshot, and as it requires spinning up a dataflow (`winning_bids` is a non-materialized view) also some additional changes that happen before we are able to report the snapshot.
+The next block is live and reports a new update as it happens, from `38550` to `38551`.
+The last block reports multiple seconds proceeding for which the count does not change.
 
-The second block of results reveals the snapshot itself (at the snapshot time), in this case some changes that happened quite soon after the snapshot, and finally a progress message indicating this the output is complete.
-
-```
-1695653291958	f	1	38549
-1695653293090	f	-1	38549
-1695653293090	f	1	38550
-1695653298001	t	\N	\N
--- Initial snapshot and immediate change
-```
-In this case the count at the snapshot time of `1695653291958` is `38549`.
-By the time we had determined the snapshot value (`winning_bids` is a non-materialized view) it had changed, and those changes are included as soon as we learned about them.
-The final line communicates the next possible time when an update might happen.
-
-The next block of results reflect a brief pause followed by another change.
-```
-1695653299001	t	\N	\N
-1695653299105	t	\N	\N
-1695653299105	f	-1	38550
-1695653299105	f	1	38551
-1695653300001	t	\N	\N
--- Brief break before next change
-```
-Notice that changes come in pairs here, a deletion of a old value and an addition of the new value. 
-Although the `COUNT(*)` will always be a single value, we could have subscribed to an arbitrary collection of data, and the records in and out unambiguously communicate the change.
-
-Finally, nothing happens for a while. This is communicated by a steady trickle of watermark messages that indicate that time has moved forward with no changes observed.
-```
-1695653301001	t	\N	\N
-1695653302001	t	\N	\N
-1695653303001	t	\N	\N
-...
--- Nothing happens for a while.
-```
+Importantly, these blocks are each reports of the correct `COUNT(*)` output at each time, rather than "what happens to be available". 
+Materialize will wait until it is certain of the exact updates for a time, including that they are durably committed, before reporting them.
 
 Although other destinations differ from `SUBSCRIBE`, each have access to an ongoing stream of precise information detailing exactly what changed, when it changed, and whether more changes are due.
 This information communicates to consumers the moment a change has certainly occured, giving them the confidence to act immediately.
@@ -307,7 +273,7 @@ This information communicates to consumers the moment a change has certainly occ
 
 Consistency is critical on operational workflows because there are actions that need to be taken.
 Many of these actions have consequences, and if they are directly driven by an inconsistent platform its up to you to diagnose and debug any resulting glitchy behavior.
-These glitches have consequences too, some of which can be fixed and some of which cannot.
+These glitches have consequences too, some of which can be corrected after the fact and some of which cannot.
 Operational platforms provide value in part by introducing and maintaining consistency for you, avoiding unintended actions and their consequences.
 
 Materialize specifically provides strict serializability, and extends this to its streaming ingestion, transformation, and onward communication.
